[gd_scene load_steps=4 format=3 uid="uid://dyvylv0rjwmsf"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_hufru"]
[ext_resource type="PackedScene" uid="uid://3tlflkwr2kk6" path="res://scenes/objects/gate.tscn" id="3_r3rxe"]
[ext_resource type="PackedScene" uid="uid://cnqpq8oim87rj" path="res://scenes/player/player.tscn" id="4_wajg0"]

[node name="Level" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_hufru")

[node name="Gate" parent="." instance=ExtResource("3_r3rxe")]
position = Vector2(824.286, -284.286)

[node name="Player" parent="." instance=ExtResource("4_wajg0")]
position = Vector2(700, 717.143)

[connection signal="body_entered_gate" from="Gate" to="." method="_on_gate_body_entered_gate"]
[connection signal="playerGrenaded" from="Player" to="." method="_on_player_player_grenaded"]
[connection signal="playerShooted" from="Player" to="." method="_on_player_player_shooted"]
